--- a/TikTokToeGame.html
+++ b/TikTokToeGame.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<input type='checkbox' class='single_player' checked /> Multiplayer(2 Player)
+<input type='checkbox' class='single_player' /> Multiplayer(2 Player)
 <div class='board'>
 
 </div>
