--- a/TikTokToeGame.html
+++ b/TikTokToeGame.html
@@ -37,8 +37,8 @@ function intial(_is_winner,_start_with,_current_turn,_count){
   var _result='<table border="1" class="result_table">';
   _result +='<caption>Result</caption>';
    _result +='<thead>';
-    _result+='<tr><th> A wins </th>';
-	_result+='<th> B wins </th>';
+    _result+='<tr><th class="a_turn turn"> A wins </th>';
+	_result+='<th class="b_turn"> B wins </th>';
 	_result+='<th> Tie </th> </tr>'; 
     _result+='</thead>';
 	_result +='<tbody>';
@@ -58,10 +58,14 @@ function load_board(){
 if(localStorage.is_first==1){
 localStorage.is_first=0;
 intial(0,'Player A','Player A',0);
+  $(".a_turn").addClass('turn');
+		     $(".b_turn").removeClass('turn');
 } 
 else{
 localStorage.is_first=1;
 intial(0,'Player B','Player B',0); 
+  $(".b_turn").addClass('turn');
+		     $(".a_turn").removeClass('turn');
 }
  var _thead='<thead><tr><th colspan="3"><span class="current_player_state">'+start_with+'</span></th></tr></thead>';
   
@@ -95,12 +99,15 @@ $(".tick").click(function(){
 		   if(is_one_player==false){
 		      auto_click();
 		   }
-		   
+		    $(".b_turn").addClass('turn');
+		     $(".a_turn").removeClass('turn');
 		}
 		else{
 		$(this).html('O');
 		current_turn='Player A'; 
 		   $(this).addClass('player_A_selected');
+		   $(".a_turn").addClass('turn');
+		     $(".b_turn").removeClass('turn');
 		}
 		
 		
@@ -290,6 +297,11 @@ text-align:center;
 }
 tbody tr td{
 cursor: pointer;
+}
+
+.turn {
+background:green;
+color:white;
 }
 </style>
 </html>
